# EstherPlatformer

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: entity.cpp  entity.h  game.cpp  game.h  main.cpp  player.cpp  player.h  terrainElement.cpp  terrainElement.h
